[package]
name = "tftp"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "fsm"
# path = "src/fsm/ideias-async.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"
